GNOME Bugzilla – Bug 751787
Images of refresh button and logo are pixelated on scaled outputs
Last modified: 2015-09-30 22:44:31 UTC
On scaled outputs (HiDPI), those two images are quite ugly compared to the rest of the buttons. Providing a vector version of them would fix this issue for arbitrary scaling properties.
The refresh button is 'view-refresh-symbolic' (it is actually an svg, so not sure how it's being pixellated). The icon used for the logo is 'web-browser'.
I tested on Weston, with everything stock from ArchLinux (except webkit2gtk), if that helps reproducing. Thanks for changing the product to the one it belongs to. :)
There is nothing specific about view-refresh-symbolic, it's the same scalable vector SVG as all the other icons. Same for web-browser-symbolic. Can you provide a screenshot?
I added a screenshot in the URL field, and noticed the stop button appear non-vectorial as well.
Created attachment 306550 [details] hidpi working fine
I'm afraid I can't reproduce the issue locally. In any case it's hardly an issue with the icon theme itself, throwing the hot potato back to epiphany :)
Is it possible that the icon becomes blurry after switching from Reload to Stop and back? If so, we can assign this to GTK+. Otherwise, I have no clue what to do with this bug.
It doesn’t seem so, when I load Epiphany on about:blank the stop button looks pixelated too.
I can actually see view-refresh-symbolic.svg being loaded, in strace, so the issue wouldn’t be that it isn’t vectorial but that it gets rendered at the wrong size, or something. The only PNG files loaded by Epiphany are web-browser.png at various sizes: 22, 16, 24, 32, 256, 48, then 16 again.
Can you post a screenshot?
I did already, in the URL field: http://linkmauve.fr/files/epiphany-hidpi.png
Hot potato -> GTK+, since I have no clue what else to do with this bug. Strange that it works for Jakub but not you. (Presumably Weston does not have anything to do with that... but maybe it does.)
works fine here as well
I just managed to reproduce on a 3.18 stack, the refresh icon is good if only my DP1 output is enabled in Weston’s config file with scale=2, and bad if my LVDS1 output is also enabled with scale=1. It is also good when my LVDS1 output is enabled with scale=2.
And this is a tool button ? How is it constructed ?
ignore the tool button question - I've looked at the screenshot now. Still, knowing how the buttons are constructed would be helpful.
In ephy-toolbar.c, ephy_toolbar_constructed(): /* Reload/Stop */ button = gtk_button_new (); /* FIXME: apparently we need an image inside the button for the action * icon to appear. */ gtk_button_set_image (GTK_BUTTON (button), gtk_image_new ()); gtk_widget_set_valign (button, GTK_ALIGN_CENTER); action = gtk_action_group_get_action (action_group, "ViewCombinedStopReload"); gtk_activatable_set_related_action (GTK_ACTIVATABLE (button), action); gtk_header_bar_pack_start (GTK_HEADER_BAR (toolbar), button);
Fixed the menu button. Can't reproduce the other button problem.